Given two non-negative integers, num1 and num2 represented as string, return the sum of num1 and num2 as a string.